--- a/index.html
+++ b/index.html
@@ -2,26 +2,46 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Mini Card Memory Helper</title>
+  <title>Card Helper Custom Grid</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h2>🧠 Card Flip Helper</h2>
+<h2>🧠 Card Flip Helper</h2>
 
-  <!-- TOOLBAR -->
-  <div class="toolbar">
-    <button class="tool active" data-icon="🔥">🔥</button>
-    <button class="tool" data-icon="❄️">❄️</button>
-    <button class="tool" data-icon="⭐">⭐</button>
-    <button class="tool" data-icon="🍎">🍎</button>
-    <button class="tool erase" data-icon="">❌</button>
-    <button id="reset">Reset</button>
-  </div>
+<!-- CONTROL -->
+<div class="control">
+  Cao:
+  <input type="number" id="rows" value="3" min="1" max="8">
+  Dài:
+  <input type="number" id="cols" value="6" min="1" max="8">
+<button id="createGrid" type="button">Tạo Lưới</button>
+<button id="resetAll" type="button">Làm Lại Từ Đầu</button>
+</div>
 
-  <!-- GRID -->
-  <div class="grid" id="grid"></div>
+<!-- TOOLBAR ICON -->
+<div class="toolbar">
+  <button class="tool active" data-icon="⚓">⚓</button>
+  <button class="tool" data-icon="️🚢">️🚢</button>
+  <button class="tool" data-icon="️🍷">️🍷</button>
+  <button class="tool" data-icon="🔷">🔷</button>
+  <button class="tool" data-icon="️🎵">️🎵</button>
+  <button class="tool" data-icon="️⭐">️⭐ xu</button>
+  <button class="tool" data-icon="️🌟">️🌟 cơ hội</button>
+  <button class="tool" data-icon="🔍">🔍</button>
+  <button class="tool" data-icon="☸️">☸️</button>
+  <button class="tool erase" data-icon="">❌ xoá ô</button>
+</div>
 
-  <script src="script.js"></script>
+<!-- MODE -->
+<div class="toolbar">
+ <button id="clearCards" type="button">🧹 Xoá toàn bộ ô</button>
+  
+</div>
+
+<!-- GRID -->
+<div id="grid" class="grid"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
